[package]
name = "r_small_snake"
version = "0.1.0"
authors = ["Paul Otten <lightnica@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winbase", "processenv", "consoleapi", "synchapi"] }
getrandom = "0.2"

[profile.dev]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
